[package]
name = "kona-cli"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
tracing.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }

# `secrets` feature
libp2p = { workspace = true, features = ["secp256k1"], optional = true }
thiserror = { workspace = true, optional = true }
alloy-primitives = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
secrets = ["dep:libp2p", "dep:thiserror", "dep:alloy-primitives"]
