[package]
name = "kona-cli"
version = "0.3.2"
description = "Shared CLI utilities for Kona crates"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
tracing.workspace = true
serde = { workspace = true, features = ["derive"]}
clap = { workspace = true, features = ["derive", "env"] }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "json", "tracing-log"] }
tracing-appender.workspace = true
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }
metrics-process.workspace = true
anyhow = { workspace = true, default-features = false }

# `secrets` feature
libp2p = { workspace = true, features = ["secp256k1"], optional = true }
thiserror = { workspace = true, optional = true }
alloy-primitives = { workspace = true, optional = true, features = ["serde"] }

# `node-config` feature
url = { workspace = true, optional = true, features = ["serde"] }
alloy-chains = { workspace = true, optional = true, features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
secrets = [ "dep:alloy-primitives", "dep:libp2p", "dep:thiserror" ]
node-config = [ "dep:url", "dep:alloy-primitives", "dep:alloy-chains" ]
