[workspace]
members = []

[package]
name = "maili-genesis"
version = "0.2.9"
description = "Genesis types for optimism"
edition = "2024"
license = "MIT"
rust-version = "1.85"
authors = ["clabby", "refcell"]
homepage = "https://github.com/op-rs/kona"
repository = "https://github.com/op-rs/kona"
keywords = ["ethereum", "optimism", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
exclude = ["**/target"]

[dependencies]
kona-genesis = "0.1.0"

[features]
default = []
std = ["kona-genesis/std"]
revm = ["kona-genesis/revm"]
serde = ["kona-genesis/serde"]
arbitrary = ["kona-genesis/arbitrary"]
