[package]
name = "maili-interop"
version = "0.2.8"
description = "Interop types for the OP Stack"

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
kona-interop.workspace = true

[features]
default = []
std = ["kona-interop/std"]
