[workspace]
members = []

[package]
name = "maili-interop"
version = "0.2.9"
description = "Interop types for the OP Stack"
edition = "2021"
license = "MIT"
rust-version = "1.85"
authors = ["clabby", "refcell"]
homepage = "https://github.com/op-rs/kona"
repository = "https://github.com/op-rs/kona"
keywords = ["ethereum", "optimism", "crypto"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
exclude = ["**/target"]

[dependencies]
kona-interop = "0.1.2"

[features]
default = []
# std = ["kona-interop/std"]
